Fix CORS and package declarations: allow all origins, fix all controller/service/repository/entity/dto packages to proper layered architecture